test/tests/stages/14_pointers/invalid_types/compare_mixed_pointer_types.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const unsigned long(0ul)
  ;
  unsigned
  *
  identifier(y)
  =
  const unsigned long(0ul)
  ;
  return
  identifier(x)
  ==
  identifier(y)
  ;
  }
